common-test: tests pass.