@@ -49,7 +49,7 @@
       <version>0.09</version>
       <scope>test</scope>
     </dependency>
-    
+
     <dependency>
       <groupId>mockobjects</groupId>
       <artifactId>mockobjects-core</artifactId>
@@ -63,6 +63,14 @@
       <version>1.1</version>
       <scope>test</scope>
     </dependency>
+    
+    <dependency>
+      <groupId>commons-lang</groupId>
+      <artifactId>commons-lang</artifactId>
+      <version>2.3</version>
+      <scope>test</scope>
+    </dependency>
+    
 
     <dependency>
       <groupId>junit</groupId>
@@ -79,6 +87,28 @@
         <directory>tests</directory>
       </testResource>
     </testResources>
-   </build>
 
+    <plugins>
+
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.17</version>
+        <configuration>
+          <argLine>
+            -Xmx768m
+            -Dfile.encoding=UTF-8
+            -Ddk.netarkivet.settings.file=tests/dk/netarkivet/test-settings.xml
+            -Dorg.apache.commons.logging.log=org.apache.commons.logging.impl.Jdk14Logger
+            -Djava.util.logging.config.file=tests/dk/netarkivet/testlog.prop
+            -Djava.security.manager
+            -Djava.security.policy=tests/dk/netarkivet/ant-test.policy
+            -Dorg.archive.crawler.frontier.AbstractFrontier.queue-assignment-policy=org.archive.crawler.frontier.HostnameQueueAssignmentPolicy,org.archive.crawler.frontier.IPQueueAssignmentPolicy,org.archive.crawler.frontier.BucketQueueAssignmentPolicy,org.archive.crawler.frontier.SurtAuthorityQueueAssignmentPolicy,org.archive.crawler.frontier.TopmostAssignedSurtQueueAssignmentPolicy,dk.netarkivet.harvester.harvesting.DomainnameQueueAssignmentPolicy
+
+            -Duser.language=en -Duser.country=US -Duser.variant=US
+          </argLine>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 </project>
